--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-voila==0.1.6
+voila==0.2.10
 ipywidgets==7.5
 pygments==2.4.1
 numpy
-pathlib
+pathlib==1.0.1
 opencv-python==4.5.3.56
+conda==4.10.3
