--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ ipywidgets==7.5
 pygments==2.4.1
 numpy
 #pathlib==1.0.1
-opencv-python==4.5.3.56
-
+#opencv-python==4.5.3.56
+opencv-python-headless
