--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-voila==0.1.6
-ipywidgets==7.5
-pygments==2.4.1
+#voila==0.1.6
+voila
+ipywidgets
+#ipywidgets==7.5
+#pygments==2.4.1
 numpy
 #pathlib==1.0.1
 #opencv-python==4.5.3.56
 opencv-python-headless
-jupiter-server==0.1.8
+
