--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ ipywidgets
 #ipywidgets==7.5
 #pygments==2.4.1
 numpy
+pathlib
 #pathlib==1.0.1
 #opencv-python==4.5.3.56
 opencv-python
-
+numpy
+math
