--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ numpy
 pathlib
 #pathlib==1.0.1
 #opencv-python==4.5.3.56
-opencv-contrib-python==4.2.0.34
+opencv-python~=4.2.0
+#opencv-contrib-python==4.2.0.34
 
