--- a/requirements.txt
+++ b/requirements.txt
@@ -7,27 +7,148 @@ numpy
 pathlib
 #pathlib==1.0.1
 #opencv-python==4.5.3.56
-opencv-python~=4.2.0
+#opencv-python~=4.2.0
 #opencv-contrib-python==4.2.0.34
 
-libjpeg62-dev
 
-libtiff4-dev
 
-zlib1g-dev
 
-libjasper-dev
 
-libavcodec-dev
 
-libdc1394-22-dev
 
-libgstreamer0.10-dev
+anaconda-client==1.7.2
+anaconda-navigator==2.0.3
 
-libgstreamer-plugins-base0.10-dev
+appdirs==1.4.4
+argh==0.26.2
 
-libavformat-dev
+atomicwrites==1.4.0
 
-libv4l-dev
+backports.weakref==1.0.post1
 
-libswscale-dev
+bkcharts==0.2
+black==19.10b0
+
+boto==2.49.0
+Bottleneck==1.3.2
+brotlipy==0.7.0
+certifi==2021.5.30
+
+clyent==1.2.2
+
+comtypes==1.1.10
+conda==4.10.3
+conda-build==3.21.4
+
+conda-verify==3.4.2
+
+cycler==0.10.0
+
+cytoolz==0.11.0
+
+download-gitignore==2.0.1
+entrypoints==0.3
+et-xmlfile==1.1.0
+fastcache==1.1.0
+
+fonttools==4.25.0
+
+future==0.18.2
+
+gmpy2==2.0.8
+
+h5py==2.10.0
+
+jupyter==1.0.0
+
+llvmlite==0.36.0
+locket==0.2.1
+
+mccabe==0.6.1
+menuinst==1.4.16
+mistune==0.8.4
+mkl-fft==1.3.0
+
+mkl-service==2.4.0
+
+mpmath==1.2.1
+
+multipledispatch==0.6.0
+munkres==1.1.4
+mypy-extensions==0.4.3
+navigator-updater==0.2.1
+
+opencv-python==4.5.3.56
+
+parso==0.7.0
+
+pathlib==1.0.1
+
+pathspec==0.7.0
+
+patsy==0.5.1
+pdf2image==1.16.0
+pdfminer.six==20201018
+pep8==1.7.1
+
+pkginfo==1.7.1
+
+ply==3.11
+
+
+
+pycosat==0.6.3
+
+pycurl==7.43.0.6
+
+pyodbc===4.0.0-unsupported
+
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+PyQtWebEngine==5.15.4
+PyQtWebEngine-Qt5==5.15.2
+pyreadline==2.1
+
+pytesseract==0.3.8
+pytest==6.2.4
+
+pywin32==228
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
+PyYAML==5.4.1
+
+QDarkStyle==2.8.1
+
+scikit-image==0.18.1
+
+session-info==1.0.0
+simplegeneric==0.8.1
+
+sip==4.19.13
+
+statsmodels==0.12.2
+stdlib-list==0.8.0
+
+tables==3.6.1
+
+terminado==0.9.4
+
+unicodecsv==0.14.1
+
+voila==0.2.10
+
+webencodings==0.5.1
+
+widgetsnbextension==3.5.1
+
+win-unicode-console==0.5
+wincertstore==0.2
+wrapt==1.12.1
+
+xlwings==0.24.7
+xlwt==1.3.0
+
+zict==2.0.0
+
+zope.event==4.5.0
