--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ ipywidgets
 numpy
 pathlib
 #pathlib==1.0.1
-#opencv-python==4.5.3.56
+opencv-python==4.5.3.56
 #opencv-python~=4.2.0
 #opencv-contrib-python==4.2.0.34
 
@@ -16,139 +16,139 @@ pathlib
 
 
 
-anaconda-client==1.7.2
-anaconda-navigator==2.0.3
+anaconda-client
+anaconda-navigator
 
-appdirs==1.4.4
-argh==0.26.2
+appdirs
+argh
 
-atomicwrites==1.4.0
+atomicwrites
 
-backports.weakref==1.0.post1
+backports.weakref
 
-bkcharts==0.2
-black==19.10b0
+bkcharts
+black
 
-boto==2.49.0
-Bottleneck==1.3.2
-brotlipy==0.7.0
-certifi==2021.5.30
+boto
+Bottleneck
+brotlipy
+certifi
 
-clyent==1.2.2
+clyent
 
-comtypes==1.1.10
-conda==4.10.3
-conda-build==3.21.4
+comtypes
+conda
+conda-build
 
-conda-verify==3.4.2
+conda-verify
 
-cycler==0.10.0
+cycler
 
-cytoolz==0.11.0
+cytoolz
 
-download-gitignore==2.0.1
-entrypoints==0.3
-et-xmlfile==1.1.0
-fastcache==1.1.0
+download-gitignore
+entrypoints
+et-xmlfile
+fastcache
 
-fonttools==4.25.0
+fonttools
 
-future==0.18.2
+future
 
-gmpy2==2.0.8
+gmpy2
 
-h5py==2.10.0
+h5py
 
-jupyter==1.0.0
+jupyter
 
-llvmlite==0.36.0
-locket==0.2.1
+llvmlite
+locket
 
-mccabe==0.6.1
-menuinst==1.4.16
-mistune==0.8.4
-mkl-fft==1.3.0
+mccabe
+menuinst
+mistune
+mkl-fft
 
-mkl-service==2.4.0
+mkl-service
 
-mpmath==1.2.1
+mpmath
 
-multipledispatch==0.6.0
-munkres==1.1.4
-mypy-extensions==0.4.3
-navigator-updater==0.2.1
+multipledispatch
+munkres
+mypy-extensions
+navigator-updater
 
-opencv-python==4.5.3.56
+opencv-python
 
-parso==0.7.0
+parso
 
-pathlib==1.0.1
+pathlib
 
-pathspec==0.7.0
+pathspec
 
-patsy==0.5.1
-pdf2image==1.16.0
-pdfminer.six==20201018
-pep8==1.7.1
+patsy
+pdf2image
+pdfminer.six
+pep8
 
-pkginfo==1.7.1
+pkginfo
 
-ply==3.11
+ply
 
 
 
-pycosat==0.6.3
+pycosat
 
-pycurl==7.43.0.6
+pycurl
 
-pyodbc===4.0.0-unsupported
+pyodbc
 
-PyQt5==5.15.4
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.0
-PyQtWebEngine==5.15.4
-PyQtWebEngine-Qt5==5.15.2
-pyreadline==2.1
+PyQt5
+PyQt5-Qt5
+PyQt5-sip
+PyQtWebEngine
+PyQtWebEngine-Qt5
+pyreadline
 
-pytesseract==0.3.8
-pytest==6.2.4
+pytesseract
+pytest
 
-pywin32==228
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.4.1
+pywin32
+pywin32-ctypes
+pywinpty
+PyYAML
 
-QDarkStyle==2.8.1
+QDarkStyle
 
-scikit-image==0.18.1
+scikit-image
 
-session-info==1.0.0
-simplegeneric==0.8.1
+session-info
+simplegeneric
 
-sip==4.19.13
+sip
 
-statsmodels==0.12.2
-stdlib-list==0.8.0
+statsmodels
+stdlib-list
 
-tables==3.6.1
+tables
 
-terminado==0.9.4
+terminado
 
-unicodecsv==0.14.1
+unicodecsv
 
-voila==0.2.10
+voila
 
-webencodings==0.5.1
+webencodings
 
-widgetsnbextension==3.5.1
+widgetsnbextension
 
-win-unicode-console==0.5
-wincertstore==0.2
-wrapt==1.12.1
+win-unicode-console
+wincertstore
+wrapt
 
-xlwings==0.24.7
-xlwt==1.3.0
+xlwings
+xlwt
 
-zict==2.0.0
+zict
 
-zope.event==4.5.0
+zope.event
