--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ ipywidgets
 numpy
 pathlib
 #pathlib==1.0.1
-opencv-python~=4.2.0
+opencv-python-headless
 #opencv-python~=4.2.0
 #opencv-contrib-python==4.2.0.34
 
@@ -16,25 +16,5 @@ opencv-python~=4.2.0
 
 
 
-
-
-download-gitignore
-
-
-jupyter
-
-mpmath
-
-
-
-opencv-python
-
-
-pathspec
-
-
-webencodings
-
-widgetsnbextension
 
 
